Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -846,7 +846,7 @@ function getCoordinatesOfVertex(hexagons, targetVertexNumber) {
 
 function drawGreenCirclesOnRandomLocations() {
     const hexagons = document.querySelectorAll('#hexagonGroup polygon');
-    const svg = document.querySelector('hexagonGroup');
+    const svg = document.querySelector('#hexagonGroup');
 
     for (let i = 0; i < 30; i++) {
         // Selecciona un hexágono al azar
