--- a/public/index.html
+++ b/public/index.html
@@ -909,6 +909,9 @@ function detectarColisiones(playerElement) {
             // Eliminar el círculo verde del SVG
             greenCircle.parentNode.removeChild(greenCircle);
             console.log('Colisión detectada. Círculo verde eliminado.');
+
+		socket.emit('greenCircleEaten');
+
         }
     });
 
