Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -205,7 +205,13 @@ console.log(`PLAYER POINTS: ${player.puntos}`);
 
     }
 });
-	
+
+
+
+   
+socket.emit('greenCircleEaten');	
+
+
 
 //ANIMATE BLUE POINT !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 //////////////////////////////////////////////////////////////////////
