Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -890,7 +890,7 @@ function detectarColisiones(playerElement) {
 
 
 
-const playerIdN = greenCircle.getAttribute('playerId');
+const playerIdN = greenCircle.getAttribute('id');
 
 
 console.log(`Colision con: (${playerIdN})`); 
