--- a/public/index.html
+++ b/public/index.html
@@ -943,7 +943,7 @@ console.log(`Colision con: (${playerIdN})`);
             // Eliminar el círculo verde del SVG
             otherCircle.parentNode.removeChild(otherCircle);
             console.log('Colisión detectada. Círculo verde eliminado.');
-		//socket.emit('greenCircleEaten');}
+		socket.emit('greenCircleEaten');}
     });
 
 
