Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -173,7 +173,7 @@ if (existingPlayerElement) {
 	existingPlayerElement.setAttribute('cy', player.y);
 
 const sizeCalc = player.puntos * 0.1;
-playerElement.setAttribute('r', 9 + sizeCalc * 10);
+ existingPlayerElement.setAttribute('r', 9 + sizeCalc * 10);
 
 
 } else {		
