Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -882,6 +882,12 @@ function drawGreenCirclesOnRandomPoints() {
         greenCircle.setAttribute('fill', 'green');
 
         svg.appendChild(greenCircle);
+
+
+
+        console.log(`green cire: (${x}, ${y})`); 
+
+
     }
 }	
 
