--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
     #hexagonGroup {
 	top: 40;
   	left: 0;
-  	width: 100vw;
-  	height: 100vh;
+  	width: 100;
+  	height: 100;
 	position: absolute;
       	display: none; }
     #bluePoint {
