--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
 
 #svg-container {
-            width: 100vw; /* 100% del ancho de la ventana */
+            width: 100%; /* 100% del ancho de la ventana */
             height: 100vh; /* 100% de la altura de la ventana */
             overflow: auto; /* Permitir el desplazamiento cuando el contenido excede el tamaño del contenedor */
         }
