--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
 
 #svg-container {
-            width: 100%; /* 100% del ancho de la ventana */
+            width: 100vw; /* 100% del ancho de la ventana */
             height: 100vh; /* 100% de la altura de la ventana */
             overflow: auto; /* Permitir el desplazamiento cuando el contenido excede el tamaño del contenedor */
         }
@@ -29,8 +29,8 @@
     #hexagonGroup {
 	top: 40;
   	left: 0;
-  	width: 100vw;
-  	height: 100vh;
+  	width: 3000px;
+  	height: 3000px;
 	position: absolute;
       	display: none; }
     #bluePoint {
