Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,12 @@
 #svg-container {
             width: 100vw; /* 100% del ancho de la ventana */
             height: 100vh; /* 100% de la altura de la ventana */
-            overflow: auto; /* Permitir el desplazamiento cuando el contenido excede el tamaño del contenedor */
+            overflow: auto;
+
+
+touch-action: none;
+
+ /* Permitir el desplazamiento cuando el contenido excede el tamaño del contenedor */
         }
 
 
