Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
             overflow: auto;
 
 
-
+touch-action: pinch-zoom;
 
  /* Permitir el desplazamiento cuando el contenido excede el tamaño del contenedor */
         }
