Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -933,6 +933,12 @@ function drawGreenCirclesOnRandomPoints() {
         greenCircle.setAttribute('r', '8');
         greenCircle.setAttribute('fill', 'green');
 
+
+
+greenCircle.style.animation = 'circleAnimationWithDuration 2s ease-in-out infinite alternate';
+
+
+
         svg.appendChild(greenCircle);
 
 
