--- a/public/index.html
+++ b/public/index.html
@@ -190,7 +190,7 @@ const textElement = document.createElementNS('http://www.w3.org/2000/svg', 'text
     // Imprime en la consola en formato "Jugador: Puntos".
     console.log('Top 5 jugadores:');
     topPlayersx.forEach(topplayer => {
-        console.log(`${player.nombre}: ${player.puntos}`);
+        console.log(`${topplayer.nombre}: ${topplayer.puntos}`);
     });
 
     // Devuelve la lista de los mejores jugadores.
