--- a/public/index.html
+++ b/public/index.html
@@ -122,7 +122,7 @@ const hexagonGroup = document.getElementById('hexagonGroup');
 const bluePoint = {id: socket.id, name: '', x: 170,  y: 170,  color: 'blue', };
 let topaplayers = [];
 
-function addPlayer(nombre, puntos) {
+function addPlayer(nombre, puntos, color) {
 	const nuevoJugador = {
 	nombre: nombre,
 	puntos: puntos,
