Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,10 @@
       right: 0;
       padding: 10px;
       text-align: right;
+
+width: 100px; /* Añade el ancho deseado */
+      height: 100px; /* Añade la altura deseada */
+      background-color: red; 
 }
 
 body {
