Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
       padding: 10px;
       text-align: right;
 
+
+z-index: 2;
 width: 100px; /* Añade el ancho deseado */
       height: 100px; /* Añade la altura deseada */
       background-color: red; 
@@ -53,6 +55,8 @@ left: 0;
 width: 3000px;
 height: 3000px;
 position: absolute;
+
+z-index: 1;
 display: none; }
     
 #bluePoint {
