--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,16 @@ display: none; }
 <canvas id="gameCanvas" height="30" style="background-color: #ff0000;"></canvas>
 
 <div id="svg-container" ondblclick="preventZoom(event)">
-  <svg id="hexagonGroup" width="3000" height= "3000" style="background-color: #ffffff;" ></svg>
+  <svg id="hexagonGroup" width="3000" height= "3000" style="background-color: #ffffff;" >
+
+
+<text x="10" y="20" fill="red">Texto línea 1</text>
+    <text x="10" y="40" fill="blue">Texto línea 2</text>
+    <text x="10" y="60" fill="green">Texto línea 3</text>
+    <text x="10" y="80" fill="orange">Texto línea 4</text>
+    <text x="10" y="100" fill="purple">Texto línea 5</text>
+
+</svg>
 </div>
 
 <circle id="bluePoint" cx="170" cy="170" r="8" fill="blue" />
