Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -84,11 +84,12 @@ display: none; }
   <svg id="hexagonGroup" width="3000" height= "3000" style="background-color: #ffffff;" >
 
 
-<text x="10" y="20" fill="red">Texto línea 1</text>
-    <text x="10" y="40" fill="blue">Texto línea 2</text>
-    <text x="10" y="60" fill="green">Texto línea 3</text>
-    <text x="10" y="80" fill="orange">Texto línea 4</text>
-    <text x="10" y="100" fill="purple">Texto línea 5</text>
+
+<text x="10" y="20" fill="red" id="textLine1"></text>
+    <text x="10" y="40" fill="blue" id="textLine2"></text>
+    <text x="10" y="60" fill="green" id="textLine3"></text>
+    <text x="10" y="80" fill="orange" id="textLine4"></text>
+    <text x="10" y="100" fill="purple" id="textLine5"></text>
 
 </svg>
 </div>
