Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -335,12 +335,12 @@ function moveBluePoint( clickX, clickY ) {
 	getTopPlayers();
 
 
-textLine1.textContent =  'bmvjk';
-//textLine1.textContent = topplayers.length >= 1 ? topplayers[0].nombre : '';
-     // textLine2.textContent = topplayers.length >= 2 ? topplayers[1].nombre : '';
-     // textLine3.textContent = topplayers.length >= 3 ? topplayers[2].nombre : '';
-     // textLine4.textContent = topplayers.length >= 4 ? topplayers[3].nombre : '';
-     // textLine5.textContent = topplayers.length >= 5 ? topplayers[4].nombre : '';
+//textLine1.textContent =  'bmvjk';
+textLine1.textContent = topplayers.length >= 1 ? topplayers[0].nombre : '';
+     textLine2.textContent = topplayers.length >= 2 ? topplayers[1].nombre : '';
+     textLine3.textContent = topplayers.length >= 3 ? topplayers[2].nombre : '';
+      textLine4.textContent = topplayers.length >= 4 ? topplayers[3].nombre : '';
+     textLine5.textContent = topplayers.length >= 5 ? topplayers[4].nombre : '';
  
 
 const playersContainer = document.getElementById('playersContainer');
