Actualizar index.html

--- a/public/index.html
+++ b/public/index.html
@@ -336,7 +336,7 @@ function moveBluePoint( clickX, clickY ) {
 
 
 //textLine1.textContent =  'bmvjk';
-textLine1.textContent = topplayers.length >= 1 ? topplayers[0].nombre : '';
+textLine1.textContent = topplayers.length >= 1 ? '1. '+topplayers[0].nombre + ': '+topplayers[0].puntos : '';
      textLine2.textContent = topplayers.length >= 2 ? topplayers[1].nombre : '';
      textLine3.textContent = topplayers.length >= 3 ? topplayers[2].nombre : '';
       textLine4.textContent = topplayers.length >= 4 ? topplayers[3].nombre : '';
